# micro-jam-engine

./: .gitignore  404.html  Cargo.toml  README.md  book.toml  case-studies.html  design-docs.html  engine-fundementals.html  getting-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pages.yml
case-studies/: pong.html
design-docs/: game-of-strife.html  pong.html
docs/: book.toml
docs/src/: SUMMARY.md  case-studies.md  design-docs.md  engine-fundementals.md  getting-started.md  introduction.md
docs/src/case-studies/: pong.md
docs/src/design-docs/: game-of-strife.md  pong.md
docs/src/engine-fundementals/: game-loop.md  lying-to-you.md
engine-fundementals/: game-loop.html  input.html  lying-to-you.html  rendering.html  window.html
examples/ai_brick_broken/src/: main.rs
examples/avoidtheroid/: Cargo.toml
examples/avoidtheroid/src/: main.rs
examples/color/: Cargo.toml
examples/color/src/: main.rs
examples/cube/: Cargo.toml  index.html
examples/cube/src/: main.rs
examples/maze/: Cargo.toml
examples/maze/src/: main.rs
examples/order/: Cargo.toml  index.html
examples/order/src/: main.rs
examples/pong with more balls/: Cargo.toml
examples/pong/src/: main.rs
examples/roots/: Cargo.toml
examples/roots/src/: food.rs  main.rs  root.rs  timer.rs
examples/shapes/: Cargo.toml
examples/shapes/src/: main.rs
examples/sprites/: Cargo.toml
src/: graphics.rs  input.rs  lib.rs  main.rs  timer.rs
(+1 files in other folders)
