[package]
name = "micro_jam_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[workspace]
members = [
    "examples/pong",
    "examples/shapes",
    "examples/cube",
    "examples/roots",
    "examples/sprites",
]

[dependencies]
wasm-bindgen = "0.2.63"
instant = "0.1.12"
rayon = "1.6.1"
softbuffer = { git = "https://github.com/rust-windowing/softbuffer", version = "0.2.0" }
winit = "0.27.5"
vek = "0.15"
image = "0.24.5"
lazy_static = "1.4.0"
serde = "1"
serde_derive = "1"
bincode = "1.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
web-sys = "0.3.60"
js-sys = "0.3"
line_drawing = "1.0.0"
winit_input_helper = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
